--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "stinky-fingers",
   "displayName": "Stinky Fingers",
   "description": "This VS Code plugin will jerk your colleagues around. You can install this plugin at your colleagues computer and see what happens.",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "engines": {
-    "vscode": "^1.33.0"
+    "vscode": "^1.43.0"
   },
+  "license": "MIT",
   "publisher": "PascalReitermann93",
   "icon": "images/icon.png",
   "repository": "https://github.com/pascalre/vscode-stinky-fingers",
@@ -28,14 +29,18 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "typescript": "^3.3.1",
-    "vscode": "^1.1.28",
-    "tslint": "^5.12.1",
-    "@types/node": "^10.12.21",
-    "@types/mocha": "^2.2.42"
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.0",
+    "@types/vscode": "^1.43.0",
+    "tslint": "^6.1.1",
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "@types/glob": "^7.1.1",
+    "mocha": "^7.1.1",
+    "vscode-test": "^1.3.0"
   }
 }
